# sogen-engine

./: .gitignore  CMakeLists.txt  README.md
include/grami/: grami.hpp
src/grami/: CMakeLists.txt  app.cpp  app.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  textures.cpp  textures.hpp
src/grami/glad/: gl.c  gl.h
src/sogen/: CMakeLists.txt  main.cpp
